--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@discordjs/voice": "^0.17.0",
+    "@distube/ytdl-core": "^4.14.3",
     "array-move": "^3.0.1",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
@@ -30,6 +31,7 @@
     "play-dl": "^1.9.7",
     "soundcloud-downloader": "^0.2.3",
     "string-progressbar": "^1.0.4",
+    "tslib": "^2.6.3",
     "youtube-sr": "~4.3.0"
   },
   "devDependencies": {
